# disckit-example-bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: update-dependencies.yml
cogs/examples/: cooldowns.py  embeds.py  examples.py  fetching.py  views.py
core/: __init__.py  bot.py  config.py  emojis.py  mention_tree.py  updater.py  utils.py
core/views/: example_modals.py  example_views.py  paginator_views.py
